--- a/app.css
+++ b/app.css
@@ -1,5 +1,5 @@
 body{
-	background: #f5d9df;
+	background: #f5d9d5;
 	font-family: 'Nunito', sans-serif;
 }
 
@@ -56,7 +56,7 @@ body{
 	margin-top: 100px; 
 }
 
-.navbar .scrolled{
+.navbar.scrolled{
 	background-color: rgb(222,192,222);
 	transition: background 500ms;
 }
